@@ -30,3 +30,4 @@ COPYING
 INSTALL
 mkinstalldirs
 intltool-*
+gparted.desktop
