@@ -6,6 +6,7 @@
 - maximum amount of primary partition isn't static anymore, it gets asked from the partition table.
 - lots of internal code cleanups. this improved performance and stability.
 - doubleclick now invokes infodialog
+- added .desktop file so gparted is accessible from Gnome/Kde menus (thanks to Stephane LOEUILLET, 1023176)
 
 **fixes**
 - sometimes creating new fat filesystems in very small spaces resulted in errors. fixed.
